Fixed the courses wrap issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -297,3 +297,75 @@ color: #1e90ff;
   }
 
 }
+
+.courses {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 2rem 4.5rem;
+  background-color: #D3D3D3;
+}
+
+.course-heading{
+  font-size: 3rem;
+  font-weight: bolder;
+  width: 100%;
+  text-align: center;
+  padding: 32px 0;
+}
+
+.course-container {
+  width: 30%;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: 2rem;
+}
+
+.course-details {
+  padding: 1rem 1.5rem;
+  background-color: #fff;
+  height: 8rem;
+}
+
+.course-details h4 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.course-details h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.course-details h5 {
+  font-size: 1rem;
+  line-height: 1.3;
+}
+
+@media only screen and (max-width: 570px) {
+
+  .courses{
+    background-color: #fff;
+    padding: 1rem;
+  }
+
+  .course-details {
+    background-color: #c0c0c0;
+    padding: 1rem 0 1.5rem 1rem;
+    height: auto;
+  }
+
+  .course-details h4, .course-details h5 {
+    display: none;
+  }
+
+  .course-container {
+    width: 100%;
+  }
+
+  .course-details h2 {
+    width: 100%;
+    text-align: left;
+    font-weight: normal;
+  }
+}
